# sciharnessbench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  LEADERBOARD.md  METRICS.md  SPEC.md  TAXONOMY.md  THREAT_MODEL.md
paper/: macros.tex  main.aux  main.bbl  main.blg  main.tex  references.bib
paper/figures/: make_figures.py  make_tables.py
paper/tables/: facts.tex  tab_bydomain.tex  tab_bytrap.tex  tab_composition.tex  tab_families.tex  tab_leaderboard.tex  tab_reference.tex  tab_taxonomy.tex
results/: sample_scorecard.md  scorecard_reference-careful.json  scorecard_reference-naive.json
results/models/: _summary.json  anthropic__claude-haiku-4-5-20251001.json  anthropic__claude-opus-4-8.json  anthropic__claude-sonnet-4-6.json  google__gemini-2.5-flash.json  google__gemini-2.5-pro.json  google__gemini-3.1-pro-preview.json  openai__gpt-4.1.json  openai__gpt-5-mini.json  openai__gpt-5.1.json  openai__gpt-5.5.json
scripts/: agent_example.py  make_scorecard.py  modal_eval.py  run_benchmark.py  run_models.py
shb/: __init__.py  isolated.py  providers.py  registry.py  runner.py  scoring.py  taxonomy.py  types.py  utils.py
shb/agents/: __init__.py  llm.py  reference.py
shb/domains/: __init__.py  astronomy.py  biology.py  chemistry.py  climate.py  materials.py  neuroscience.py  physics.py  statistics.py
tests/: test_adversarial.py  test_contract.py  test_discrimination.py  test_harness.py  test_invariants.py  test_isolated.py  test_scoring.py
