[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sciharnessbench"
version = "0.1.0"
description = "The fake-science benchmark for AI science agents — self-generating, self-grading, contamination-resistant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Synthetic Sciences" }]
keywords = ["benchmark", "ai-for-science", "agents", "evaluation", "reproducibility"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "rdkit>=2022.9",
    "biopython>=1.81",
    "astropy>=5.3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
eval = ["openai>=2", "anthropic>=0.40", "google-genai", "modal"]

[tool.setuptools]
packages = ["shb", "shb.agents", "shb.domains"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
